--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 Stores memes including tags to a database. The memes can 
                 be searched by tags and by the title or the id of the meme.
             </p>
-            <button class="button" onclick="window.open('https://github.com/turvasa-ko/meme-database', '_blank');">GitHub</button>
+            <button class="button" onclick="window.open('https://github.com/turvasa-ko/meme-database', '_blank');">Repository</button>
         </div>
 
         <div class="project">
@@ -77,7 +77,7 @@
                 answer fundamentals". The answers and grade/points will
                 be stored to a database, where the user can look them up.
             </p>
-            <button class="button" onclick="window.open('https://github.com/turvasa-ko/yo-prep', '_blank');">GitHub</button>
+            <button class="button" onclick="window.open('https://github.com/turvasa-ko/yo-prep', '_blank');">Repository</button>
         </div>
     </section>
 
@@ -87,8 +87,7 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <div class="contact">
-            <p>Email: </p>
-            <a href="url">tatu.tallavaara@gmail.com</a><br>
+            <p>Email: </p><a href="url">tatu.tallavaara@gmail.com</a><br>
 
             <p>Phone Num: +358 40 935 9252</p>
         </div>
