--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tatu Tallavaara - Portfolio</title>
+        <title>Tatu Tallavaara - CV</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
     </head>
