Portfolio ready. CV almost ready.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="index_style.css">
     </head>
 
 
@@ -19,7 +19,7 @@
 
         <!-- Headers -->
         <header>
-            <h1>Tatu Tallavaara</h1>
+            <h1>Tatu E. Tallavaara</h1>
         </header>
 
         <!-- Buttons -->
