--- a/cv.html
+++ b/cv.html
@@ -87,7 +87,6 @@
         <!-- Education section -->
         <section id="education">
             <h2>Education</h2>
-            <a href="https://opintopolku.fi/koski/opinnot/2c82088e33174a5797b3c4510c61a45d" target="_blank">My Studyinfo</a>
             
             <!-- University -->
             <div class="info">
@@ -110,6 +109,10 @@
                         <u>data structures</u>. Currently exploring <u>Cybersecurity</u> as a 
                         focus for my master’s studies.
                     </p>
+                </div>
+
+                <div class="info_row">
+                    <a href="https://opintopolku.fi/koski/opinnot/2c82088e33174a5797b3c4510c61a45d" target="_blank">My Studyinfo</a>
                 </div>
             </div>
 
@@ -229,62 +232,66 @@
 
             <ul class="skills">
                 <li>
-                    Proficient in Python and Java, with working knowledge of Rust, JavaScript,
-                    HTML and Assembly
+                    Proficient in <u>Python</u> and <u>Java</u>, with working knowledge of <u>Rust</u>, 
+                    <u>JavaScript</u>, <u>HTML</u> and <u>Assembly</u>
                 </li>
                 <li>
-                    Experience with algorithms and datastructures, Linux environments and Git
+                    Experience with algorithms and datastructures, <u>Linux</u> environments and <u>Git</u>
                 </li>
                 <li>
-                    Backend development usingusing FastAPI with PostgreSQL and SQLite
+                    Backend development usingusing <u>FastAPI</u> with <u>PostgreSQL</u> and <u>SQLite</u>
                 </li>
                 <li>
-                    System optimatization, debugging and testing to improve performance and reliability
+                    System <u>optimatization</u>, <u>debugging</u> and <u>testing</u> to improve performance 
+                    and reliability
                 </li>
             </p>
 
 
             <!-- Languages -->
 
-            <!-- Finnish -->
-            <div class="language_row">
-                <div class="language_column">Finnish</div>
+            <div class="languages">
 
-                <div class="language_column">
-                    <img src="images/language_meter_1.png">
+                <!-- Finnish -->
+                <div class="language_row">
+                    <div class="language_column">Finnish</div>
+
+                    <div class="language_column">
+                        <img src="images/language_meter_1.png">
+                    </div>
+                </div>
+
+
+                <!-- English -->
+                <div class="language_row">
+                    <div class="language_column">English</div>
+
+                    <div class="language_column">
+                        <img src="images/language_meter_2.png">
+                    </div>
+                </div>
+    
+
+                <!-- Swedish-->
+                <div class="language_row">
+                    <div class="language_column">Swedish</div>
+
+                    <div class="language_column">
+                        <img src="images/language_meter_3.png">
+                    </div>
+                </div>
+
+
+                <!-- Arabic -->
+                <div class="language_row">
+                    <div class="language_column">Arabic</div>
+
+                    <div class="language_column">
+                        <img src="images/language_meter_4.png">
+                    </div>
                 </div>
             </div>
-
-
-            <!-- English -->
-            <div class="language_row">
-                <div class="language_column">English</div>
-
-                <div class="language_column">
-                    <img src="images/language_meter_2.png">
-                </div>
-            </div>
- 
-
-            <!-- Swedish-->
-            <div class="language_row">
-                <div class="language_column">Swedish</div>
-
-                <div class="language_column">
-                    <img src="images/language_meter_3.png">
-                </div>
-            </div>
-
-
-            <!-- Arabic -->
-            <div class="language_row">
-                <div class="language_column">Arabic</div>
-
-                <div class="language_column">
-                    <img src="images/language_meter_4.png">
-                </div>
-            </div>
-        </section>
+       </section>
     </body>
 
 
