CV download button added. Smaller header. CV ready.

--- a/cv.html
+++ b/cv.html
@@ -94,7 +94,7 @@
                 <!-- Info -->
                 <div class="info_row">
                     <div class="info_column">
-                        <h3>Bachelor's degree of Computer Science, University of Oulu</h3>
+                        <h3>Bachelor's degree of Computer Science and Engineering, University of Oulu</h3>
                     </div>
                     
                     <div class="info_column">
@@ -236,13 +236,13 @@
                     <u>JavaScript</u>, <u>HTML</u> and <u>Assembly</u>
                 </li>
                 <li>
-                    Experience with algorithms and datastructures, <u>Linux</u> environments and <u>Git</u>
+                    Experience with algorithms and data structures, <u>Linux</u> environments and <u>Git</u>
                 </li>
                 <li>
-                    Backend development usingusing <u>FastAPI</u> with <u>PostgreSQL</u> and <u>SQLite</u>
+                    Backend development using <u>FastAPI</u> with <u>PostgreSQL</u> and <u>SQLite</u>
                 </li>
                 <li>
-                    System <u>optimatization</u>, <u>debugging</u> and <u>testing</u> to improve performance 
+                    System <u>optimization</u>, <u>debugging</u> and <u>testing</u> to improve performance 
                     and reliability
                 </li>
             </p>
@@ -253,41 +253,53 @@
             <div class="languages">
 
                 <!-- Finnish -->
-                <div class="language_row">
-                    <div class="language_column">Finnish</div>
+                <div class="language_box">
+                    <div class="language_row">
+                        Finnish
+                        <img src="flags/finland_flag.png" class="flag">
+                    </div>
 
-                    <div class="language_column">
-                        <img src="images/language_meter_1.png">
+                    <div class="language_row">
+                        <img src="meters/language_meter_1.png">
                     </div>
                 </div>
 
 
                 <!-- English -->
-                <div class="language_row">
-                    <div class="language_column">English</div>
+                <div class="language_box">
+                    <div class="language_row">
+                        English
+                        <img src="flags/britain_flag.png.jpg" class="flag">
+                    </div>
 
-                    <div class="language_column">
-                        <img src="images/language_meter_2.png">
+                    <div class="language_row">
+                        <img src="meters/language_meter_2.png">
                     </div>
                 </div>
     
 
                 <!-- Swedish-->
-                <div class="language_row">
-                    <div class="language_column">Swedish</div>
+                <div class="language_box">
+                    <div class="language_row">
+                        Swedish
+                        <img src="flags/sweden_flag.png.jpg" class="flag">
+                    </div>
 
-                    <div class="language_column">
-                        <img src="images/language_meter_3.png">
+                    <div class="language_row">
+                        <img src="meters/language_meter_3.png">
                     </div>
                 </div>
 
 
                 <!-- Arabic -->
-                <div class="language_row">
-                    <div class="language_column">Arabic</div>
+                <div class="language_box">
+                    <div class="language_row">
+                        Arabic
+                        <img src="flags/arab_flag.png" class="flag">
+                    </div>
 
-                    <div class="language_column">
-                        <img src="images/language_meter_4.png">
+                    <div class="language_row">
+                        <img src="meters/language_meter_4.png">
                     </div>
                 </div>
             </div>
@@ -298,6 +310,12 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Tatu Tallavaara</p>
+        <p>© 2026 Tatu Tallavaara</p>
+
+        <a href="cv/tatu-tallavaara_cv.pdf" download id="download">
+            Download the boring PDF
+            <img src="icons/download.png">
+        </a>
     </footer>
+
 </html>
