--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 </a>
 
                 <h1>Tatu E. Tallavaara</h1>
-                <p>Computer Science student | Cybersecurity</p>
+                <p>Computer Science and Engineering student | Cybersecurity</p>
 
                 <nav>
                     <a class="button" href="#about">About</a>
@@ -56,7 +56,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Hey there! I'm Tatu, a 3rd-year Computer Science student at the University of Oulu 
+                Hey there! I'm Tatu, a 3rd-year CSE student at the University of Oulu 
                 focusing on Cybersecurity, yet I'm always curious about AI, software development and new 
                 technologies. Take a quick look at my projects and skills to see what I'm passionate about!
             </p>
@@ -161,7 +161,7 @@
 
         <!-- Footer -->
         <footer>
-            <p>© 2025 Tatu Tallavaara</p>
+            <p>© 2026 Tatu Tallavaara</p>
         </footer>
 
     </body>
