Studyinfo button fixed.

--- a/cv.html
+++ b/cv.html
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="info_row">
-                    <a href="https://opintopolku.fi/koski/opinnot/2c82088e33174a5797b3c4510c61a45d" target="_blank">My Studyinfo</a>
+                    <a href="https://opintopolku.fi/koski/opinnot/2c82088e33174a5797b3c4510c61a45d" target="_blank" id="studyinfo">My Studyinfo</a>
                 </div>
             </div>
 
