Scroll padding fixed.

--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tatu Tallavaara - CV</title>
         <link rel="stylesheet" type="text/css" href="cv_style.css">
+        <script src="script.js" defer></script>
     </head>
 
 
