'In Progress' section added to the projects.

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,12 @@
             <h2>Projects</h2>
 
             <div class="project">
-                <h3>Meme Database</h3>
+
+                <div class="progress">
+                    <h3>Meme Database</h3>
+                    <span class="in_progress">In Progress</span>
+                </div>
+
                 <p>
                     Stores memes including tags to a database. The memes can 
                     be searched by tags and by the title or the id of the meme.
@@ -96,7 +101,12 @@
             </div>
 
             <div class="project">
-                <h3>YO-prep</h3>
+
+                <div class="progress">
+                    <h3>YO-prep</h3>
+                    <span class="in_progress">In Progress</span>
+                </div>
+
                 <p>
                     Can be used to practise Finnish matriculation examinations. After
                     giving the answer an AI will evaluate it using the "good
