Small grammar mistake fixed.

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,8 +56,8 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Hey there! I'm Tatu, a 3rd-year CSE student at the University of Oulu 
-                focusing on Cybersecurity, yet I'm always curious about AI, software development and new 
+                Hey there! I'm Tatu, a last-year CSE Bachelor's student at the University of Oulu 
+                focusing on Cybersecurity, yet I'm always curious about VR, software development and new 
                 technologies. Take a quick look at my projects and skills to see what I'm passionate about!
             </p>
         </section>
