Grammar mistake fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 
         <!-- My Story -section-->
          <section id="story">
-            <h2>My Stroy</h2>
+            <h2>My Story</h2>
             <p>
                 Ever since I was a child, I've been fascinated by technology. My first real exposure came in middle school, 
                 when we practiced to use computers and built simple circuits. This inspired me to choose optional subjects 
